--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
@@ -129,9 +129,10 @@
                                 </tbody>
                             </table>
                         </md-table-container>
-
-
-                        <md-table-pagination md-limit="pagination.limit"
+                        <!--<md-table-pagination md-limit="query.limit"  md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>-->
+                        <md-table-pagination md-label="{page: 'Página:', rowsPerPage: 'Filas por página:', of: 'de'}"
+                                             md-limit="pagination.limit"
+                                             md-limit-options="[5, 10, 15]"
                                              md-page="pagination.current"
                                              md-total="{{profesionalesList.length - selectedPro.length}}"
                                              md-page-select></md-table-pagination><!--md-on-paginate="onPaginate"-->
